--- a/Clash/config/Pubg.ini
+++ b/Clash/config/Pubg.ini
@@ -10,6 +10,10 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+  - GEOSITE,pubg,自动选择
+  - DOMAIN-SUFFIX,pubgmobile.com,自动选择
+  - DOMAIN-SUFFIX,igamecj.com,自动选择
+  - DOMAIN-SUFFIX,gcloudcs.com,自动选择
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
