--- a/Clash/DNS-NoLeak.yml
+++ b/Clash/DNS-NoLeak.yml
@@ -58,12 +58,17 @@ dns:
     - "*.127.*.*.*.nip.io"
     - "*-127-*-*-*.nip.io"
   # fake-ip-filter end
+  default-nameserver:
+    - 223.5.5.5
+    - 119.29.29.29
+
   nameserver:
-    - https://223.5.5.5/dns-query
-    - https://doh.pub/dns-query
+    - https://1.1.1.1/dns-query
+    - https://8.8.8.8/dns-query
+
   proxy-server-nameserver:
-    - https://223.5.5.5/dns-query
-    - https://doh.pub/dns-query
+    - https://1.1.1.1/dns-query
+    - https://8.8.8.8/dns-query
 
 ### 域名嗅探
 sniffer:
