--- a/Clash/config/main.ini
+++ b/Clash/config/main.ini
@@ -11,6 +11,8 @@
 
 ;设置规则标志位
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/llovely45/ACL4SSR/refs/heads/main/Clash/pubg.list
+ruleset=🚀 节点选择,[]IP-CIDR,1.1.1.1/32,no-resolve
+ruleset=🚀 节点选择,[]IP-CIDR,8.8.8.8/32,no-resolve
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -52,7 +54,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/UlinoyaPed/ShellClas
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=🎯 全球直连,[]GEOIP,LAN
+ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/adobe.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/IDM.list
