--- a/Clash/config/main.ini
+++ b/Clash/config/main.ini
@@ -62,8 +62,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 优选线路`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=☑️ 手动切换`select`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]☑️ 手动切换`[]📶 优选线路`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
+custom_proxy_group=☑️ 手动切换`select`[]REJECT`(?i)^(?!.*(worker|snippet)).*
 custom_proxy_group=♻️ 自动选择`url-test`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📶 优选线路`select`[]REJECT`(warp|snip|cf|cdn|优选|worker)`https://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 优选线路`[]☑️ 手动切换`[]DIRECT
