--- a/Clash/config/main.ini
+++ b/Clash/config/main.ini
@@ -62,7 +62,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]☑️ 手动切换`[]📶 优选线路`[]🌏 亚太地区`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]☑️ 手动切换`[]📶 优选线路`[]🌏 亚太地区`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`🌍 欧洲地区`🌎 美洲地区`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`[]REJECT`(?i)^(?!.*(warp|snip|cf|cdn|优选|worker)).*
 custom_proxy_group=♻️ 自动选择`url-test`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`http://captive.apple.com/`300,,50
 custom_proxy_group=📶 优选线路`select`[]REJECT`(?i)(warp|snip|cf|cdn|优选|worker)`http://captive.apple.com/`300,,50
